updating CV and publications

--- a/publications.html
+++ b/publications.html
@@ -59,7 +59,7 @@
 												<h3>In the pipline</h3>
 												<p class =”apa-reference”>
 													<strong>Maucieri, D.G.</strong>, S. Starko and J.K. Baum. Disentangling the impacts of multiple stressors on coral reef
-													diversity: tipping points and interactive effects. (<em>In Prep</em>).
+													diversity: tipping points and interactive effects. Proceeding of the Royal Society B: Biological Sciences (<em>In Review</em>).
 												</p>
 												<p class =”apa-reference”>
 													Baum, J.K., D.C. Claar, K.L. Tietjen, J.M.T. Magel, <strong>D.G. Maucieri</strong>, K.M. Cobb, J.M. McDevitt-Irwin.
@@ -67,7 +67,8 @@
 													Preprint DOI: <a href="http://doi.org/10.1101/2022.05.10.491220v1">10.1101/2022.05.10.491220v1</a>
 												</p>
 												<p class =”apa-reference”>
-													<strong>Maucieri, D.G.</strong>. quadcleanR: An R Package for the Cleanup and Visualization of Quadrat Data. (<em>In Prep</em>).
+													<strong>Maucieri, D.G.</strong> quadcleanR: An R Package for the Cleanup and Visualization of Quadrat Data. Journal 
+													of Open Source Software (<em>Submitted</em>).
 												
 												</p>
 											</section>
