changing popover to left

--- a/publications.html
+++ b/publications.html
@@ -72,7 +72,7 @@
 														</p>
 													</div>
 													<div class="column right">
-														<div data-badge-popover="right" data-badge-type="donut" data-doi="10.1101/2022.05.10.491220v1" class="altmetric-embed"></div>
+														<div data-badge-popover="left" data-badge-type="donut" data-doi="10.1101/2022.05.10.491220v1" class="altmetric-embed"></div>
 													</div>
 												  </div>
 
@@ -96,7 +96,7 @@
 															</p>
 													</div>
 													<div class="column right">
-													  <div data-badge-popover="right" data-badge-type="donut" data-doi="10.1016/j.biocon.2021.109328" data-hide-no-mentions="true" class="altmetric-embed"></div>
+													  <div data-badge-popover="left" data-badge-type="donut" data-doi="10.1016/j.biocon.2021.109328" data-hide-no-mentions="true" class="altmetric-embed"></div>
 													</div>
 												  </div>
 												
@@ -108,7 +108,7 @@
 														</p>
 													</div>
 													<div class="column right">
-														<div data-badge-popover="right" data-badge-type="donut" data-doi="10.1139/cjz-2021-0035" data-hide-no-mentions="true" class="altmetric-embed"></div>
+														<div data-badge-popover="left" data-badge-type="donut" data-doi="10.1139/cjz-2021-0035" data-hide-no-mentions="true" class="altmetric-embed"></div>
 													</div>
 												  </div>
 
@@ -121,7 +121,7 @@
 														</p>
 													</div>
 													<div class="column right">
-														<div data-badge-popover="right" data-badge-type="donut" data-doi="10.1139/cjz-2020-0160" data-hide-no-mentions="true" class="altmetric-embed"></div>
+														<div data-badge-popover="left" data-badge-type="donut" data-doi="10.1139/cjz-2020-0160" data-hide-no-mentions="true" class="altmetric-embed"></div>
 													</div>
 												  </div>
 											</section>
