Updating and adding graphic design page

--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
 						</li>
 						<li><a href="cv.html">CV</a></li>
 						<li><a href="packages.html">Packages</a></li>
+						<li><a href="graphic_design.html">Graphic Design</a></li>
 					</ul>
 				</nav>
 
@@ -79,7 +80,8 @@
 															<a href="#" class="image featured"><img src="images/DominiqueMaucieri.jpg" alt="" /></a>
 															<h3><a href="#">About Me</a></h3>
 															<p>
-																I am a PhD student in Biology at the University of Victoria, working in the Bates Lab.
+																I am a PhD student in Biology at the University of Victoria, working in the 
+																<a href="https://www.oceanconservationlab.com/">Bates Lab</a>.
 																I am examining how multiple stressors interact (e.g., marine heatwaves, deoxygenation
 																and human actions) and affect various aspects of coral and rocky reef communities. My
 																aim will be to examine these factors using a hierarchical framework (i.e., spatial,
@@ -88,7 +90,7 @@
  															<p>
 																I have a Bachelor's degree in Ecology and Zoology from the University of Calgary and
 																a Master's degree from the University of Victoria. During my MSc, I worked in the
-																Baum Lab, examining local and global disturbances on coral biodiversity on
+																<a href="https://www.juliakbaum.org/">Baum Lab</a>, examining local and global disturbances on coral biodiversity on
 																Kiritimati Island (Christmas Island). I love teaching others about the mystery
 																of the oceans and helping others to see ways that they can impact their oceans
 																for the better.
