--- a/cv.html
+++ b/cv.html
@@ -34,6 +34,7 @@
 						</li>
 						<li class="current"><a href="cv.html">CV</a></li>
 						<li><a href="packages.html">Packages</a></li>
+						<li><a href="graphic_design.html">Graphic Design</a></li>
 					</ul>
 				</nav>
 
