--- a/packages.html
+++ b/packages.html
@@ -42,6 +42,7 @@
 						</li>
 						<li><a href="cv.html">CV</a></li>
 						<li class="current"><a href="packages.html">Packages</a></li>
+						<li><a href="graphic_design.html">Graphic Design</a></li>
 					</ul>
 				</nav>
 
