--- a/phd_research.html
+++ b/phd_research.html
@@ -138,6 +138,7 @@
 						</li>
 						<li><a href="cv.html">CV</a></li>
 						<li><a href="packages.html">Packages</a></li>
+            <li><a href="graphic_design.html">Graphic Design</a></li>
 					</ul>
 				</nav>
 
@@ -228,7 +229,8 @@
                           }
                           </script>
                       <p class="indent">
-                        For my PhD I am working in the Bates lab at the University of Victoria, and I will be
+                        For my PhD I am working in the <a href="https://www.oceanconservationlab.com/">Bates Lab</a>
+                        at the University of Victoria, and I will be
                         focusing on how multiple stressors interact (e.g., marine
                         heatwaves, deoxygenation and human actions) and affect various aspects of coral
                         and rocky reef communities. This work is important because the interactions amongst
