--- a/undergrad_research.html
+++ b/undergrad_research.html
@@ -138,6 +138,7 @@
 						</li>
 						<li><a href="cv.html">CV</a></li>
 						<li><a href="packages.html">Packages</a></li>
+            <li><a href="graphic_design.html">Graphic Design</a></li>
 					</ul>
 				</nav>
 
