adding coding page and updating publications

--- a/research.html
+++ b/research.html
@@ -34,7 +34,14 @@
 							</ul>
 						</li>
 						<li><a href="cv.html">CV</a></li>
-						<li><a href="packages.html">Packages</a></li>
+						<li>
+							<a href="stats_code.html">Coding</a>
+							<ul>
+								<li><a href="packages.html">Packages</a></li>
+								<li><a href="https://ecostatsuvic.weebly.com/">Ecostats</a></li>
+								</li>
+							</ul>
+						</li>
 						<li><a href="graphic_design.html">Graphic Design</a></li>
 					</ul>
 				</nav>
