--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
 			}
 			
 			.column {
-			  float: left;
+			  float: center;
 			  width: 33.33%;
-			  padding: 5px;
+			  padding: 10px;
 			}
 			
 			/* Clearfix (clear floats) */
@@ -53,7 +53,14 @@
 							</ul>
 						</li>
 						<li><a href="cv.html">CV</a></li>
-						<li><a href="packages.html">Packages</a></li>
+						<li>
+							<a href="stats_code.html">Coding</a>
+							<ul>
+								<li><a href="packages.html">Packages</a></li>
+								<li><a href="https://ecostatsuvic.weebly.com/">Ecostats</a></li>
+								</li>
+							</ul>
+						</li>
 						<li><a href="graphic_design.html">Graphic Design</a></li>
 					</ul>
 				</nav>
@@ -130,7 +137,7 @@
 																	<a href="masters_research.html"><img src="images/interests/Tropical_Coral_Reefs.png" alt="Coral Reefs" style="width:100%"></a>
 																</div>
 																<div class="column">
-																	<a href="https://ecostatsuvic.weebly.com/"><img src="images/interests/Coding.png" alt="Coding" style="width:100%"></a>
+																	<a href="stats_code.html"><img src="images/interests/Coding.png" alt="Coding" style="width:100%"></a>
 																</div>
 															  </div>
 														<div class="col-12">
