--- a/packages.html
+++ b/packages.html
@@ -41,7 +41,14 @@
 							</ul>
 						</li>
 						<li><a href="cv.html">CV</a></li>
-						<li class="current"><a href="packages.html">Packages</a></li>
+						<li class="current">
+							<a href="stats_code.html">Coding</a>
+							<ul>
+								<li><a href="packages.html">Packages</a></li>
+								<li><a href="https://ecostatsuvic.weebly.com/">Ecostats</a></li>
+								</li>
+							</ul>
+						</li>
 						<li><a href="graphic_design.html">Graphic Design</a></li>
 					</ul>
 				</nav>
