--- a/packages.html
+++ b/packages.html
@@ -14,7 +14,7 @@
 	<body class="is-preload">
 		<div id="page-wrapper">
   <style>
-			.center {
+			.center_2 {
 			  display: block;
 			  margin-left: auto;
 			  margin-right: auto;
@@ -72,10 +72,10 @@
 											</header>
 
 											<section>
-												<img src="images/quadcleanR.png" style="width:25%" class="center">
-												<p style="text-align:center">
+												<img src="images/quadcleanR.png" style="width:25%" class="center_2">
+												<p style="text-align:center_2">
 												</p>
-												<p style="text-align:center">
+												<p style="text-align:center_2">
 													I created the quadcleanR R package to assist in standardizing quadrat
 													areas while maintaining the spatial relationships between identified
 													organisms and substrates. There are also many functions to help with the
@@ -86,15 +86,15 @@
 														<li><a href="https://dominiquemaucieri.com/quadcleanR/" class="button large">quadcleanR Package</a></li>
 													</ul>
 												</div>
-												<p style="text-align:center">
+												<p style="text-align:center_2">
 												</p>
-												<p style="text-align:center">
+												<p style="text-align:center_2">
 													These new functions are important to ensure that quadrat data are properly
 													standardized, to allow for large scale analyses to occur so that we can better
 													understand how diversity is changing around the world
 												</p>
 
-												<p style="text-align:center">
+												<p style="text-align:center_2">
 												Additionally there is a function to produce a Shiny app so that quadrat data
 												can interactively explored. A sample data set is provided in the package, but
 												any quadrat or quadrat-like data can be used.
