updating CV and publications

--- a/publications.html
+++ b/publications.html
@@ -69,8 +69,8 @@
 												<div class="row">
 													<div class="column left">
 														<p class =”apa-reference”>
-															<strong>Maucieri, D.G.</strong>, S. Starko and J.K. Baum. Disentangling the impacts of multiple stressors on coral reef
-															diversity: tipping points and interactive effects. Proceeding of the Royal Society B: Biological Sciences (<em>In Revisions</em>).
+															<strong>Maucieri, D.G.</strong>, S. Starko and J.K. Baum. Tipping points and interactive effects of chronic human
+															disturbance and acute heat stress on coral diversity. Proceeding of the Royal Society B: Biological Sciences (<em>In Review</em>).
 														</p>
 													</div>
 													<div class="column right">
@@ -82,8 +82,8 @@
 													<div class="column left">
 														<p class =”apa-reference”>
 															Baum, J.K., D.C. Claar, K.L. Tietjen, J.M.T. Magel, <strong>D.G. Maucieri</strong>, K.M. Cobb, J.M. McDevitt-Irwin.
-															Transformation of coral communities subjected to an unprecedented heatwave is modulated by local disturbance. (<em>Accepted</em>)
-															Preprint DOI: <a href="http://doi.org/10.1101/2022.05.10.491220v1">10.1101/2022.05.10.491220v1</a>
+															Transformation of coral communities subjected to an unprecedented heatwave is modulated by local disturbance. (<em>In Review</em>)
+															Preprint DOI: <a href="https://doi.org/10.1101/2022.05.10.491220">10.1101/2022.05.10.491220v1</a>
 														</p>
 													</div>
 													<div class="column right">
