--- a/SASC_research.html
+++ b/SASC_research.html
@@ -178,7 +178,7 @@
                             <div class="numbertext">1 / 6</div>
                             <img src="images/sasc/DominiqueMaucieri_SASC1.jpg" style="width:100%">
                             <div class="text">Leopard catshark (<em>Poroderma pantherinum</em>) being measured <br \>
-														measured (Hermanus, South Africa) - &copy; Aaron Judah</div>
+														measured (Hermanus, South Africa) - &copy; Alicia Hendry</div>
                           </div>
 
                           <div class="mySlides fade">
