updating for Fall 2023

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 									<section class="box highlight">
 										<header>
 											<h2>Dominique G. Maucieri</h2>
-											<p>PhD Student UVic, MSc UVic, BSc UCalgary</p>
+											<p>PhD Candidate UVic, MSc UVic, BSc UCalgary</p>
 										</header>
 										<ul class="contact">
 											<li><a href="https://twitter.com/dgmaucieri" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
@@ -106,9 +106,9 @@
 															<p>
 																I am a PhD student in Biology at the University of Victoria, working in the 
 																<a href="https://www.oceanconservationlab.com/">Bates Lab</a>.
-																I am examining how multiple stressors interact (e.g., marine heatwaves, deoxygenation
-																and human actions) and affect various aspects of coral and rocky reef communities. My
-																aim will be to examine these factors using a hierarchical framework (i.e., spatial,
+																I am examining how multiple stressors interact (e.g., marine heatwaves, loss of habitat, hunger
+																and human disturbance) and affect various aspects of coral and rocky reef communities. In my 
+																PhD I am tackling these questions using a hierarchical framework (i.e., spatial,
 																temporal and experimental).
 															</p>
  															<p>
