updating landing page, new publications and cv

--- a/index.html
+++ b/index.html
@@ -104,12 +104,10 @@
 															<a href="#" class="image featured"><img src="images/DominiqueMaucieri.jpg" alt="" /></a>
 															<h3><a href="#">About Me</a></h3>
 															<p>
-																I am a PhD student in Biology at the University of Victoria, working in the 
+																I am a PhD Candidate in Biology at the University of Victoria, working in the 
 																<a href="https://www.oceanconservationlab.com/">Bates Lab</a>.
-																I am examining how multiple stressors interact (e.g., marine heatwaves, loss of habitat, hunger
-																and human disturbance) and affect various aspects of coral and rocky reef communities. In my 
-																PhD I am tackling these questions using a hierarchical framework (i.e., spatial,
-																temporal and experimental).
+																My dissertation examines how heat, hunger and habitat loss affect marine invertebrate communities coral and rocky reefs. 
+																In my PhD I am tackling these questions using a both experimental methods and long-term time-series data.
 															</p>
  															<p>
 																I have a Bachelor's degree in Ecology and Zoology from the University of Calgary and
@@ -123,8 +121,8 @@
 															<p>
 																My research interests primarily revolve around marine community ecology, specifically
 																coral and rocky/temperate reefs, though I
-																also have a love for coding and statistics. I love working with large data sets, as
-																well as cute, missunderstood taxa. In particular sharks and bats have been some of
+																also have a passion for coding and statistics. I love working with large data sets, as
+																well as cute but missunderstood taxa. In particular sharks and bats have been some of
 																my favorite animals to study and to teach people about.
 															</p>
 														</section>
