--- a/publications.html
+++ b/publications.html
@@ -65,6 +65,51 @@
 											</header>
 
 											<section>
+												<h3>2025</h3>
+												<div class="row">
+													<div class="column left">
+														<p class =”apa-reference”>
+															<strong>Maucieri, D.G.</strong>, D.J. Kushner, and A.E. Bates. Enduring a major marine heatwave: The role of local cool 
+															refugia and kelp forests in the resilience of marine invertebrates. Diversity and Distributions 31(6):1-13. 
+															DOI: <a href="https://doi.org/10.1111/ddi.70044">10.1111/ddi.70044</a>
+														</p>
+														</p>
+													</div>
+													<div class="column right">
+														<div data-badge-popover="left" data-badge-type="donut" data-doi="10.1111/ddi.70044" class="altmetric-embed"></div>
+													</div>
+												</div>
+
+												<h3>2024</h3>
+												<div class="row">
+													<div class="column left">
+														<p class =”apa-reference”>
+															Starko, S., G. Epstein, L. Chalifour, K. Bruce*, D. Buzzoni*, M. Csordas*, S. Dimoff*, R. Hansen*, <strong>D.G. Maucieri*</strong>, 
+															J. McHenry*, K.L. Tietjen*, B. Timmer* and J.K. Baum. 2025. Ecological responses to extreme climatic events: a systematic review of the 
+															2014-2016 Northeast Pacific marine heatwave. Oceanography and Marine Biology - An Annual Review. 63. *Author order alphabetical
+														</p>
+														</p>
+													</div>
+													<div class="column right">
+														
+													</div>
+												</div>
+
+												<div class="row">
+													<div class="column left">
+														<p class =”apa-reference”>
+															Shaffer, J. A., Oxborrow, B., Parks, D. S., <strong>Maucieri, D.G.</strong>, & Michel, J. 2024. Linking Marine Ecosystem 
+															Response to Shoreline Armor Removal and Large Dam Removals in the Elwha River and Nearshore, Washington, USA. Journal 
+															of Coastal Research. 113: 890-895. DOI: <a href="https://doi.org/10.2112/JCOASTRES-D-24A-00007.1">10.2112/JCOASTRES-D-24A-00007.1</a>
+														</p>
+														</p>
+													</div>
+													<div class="column right">
+														<div data-badge-popover="left" data-badge-type="donut" data-doi="10.2112/JCOASTRES-D-24A-00007.1" class="altmetric-embed"></div>
+													</div>
+												</div>
+
+
 												<h3>2023</h3>
 												<div class="row">
 													<div class="column left">
