updating PhD research descriptions

--- a/phd_research.html
+++ b/phd_research.html
@@ -236,19 +236,28 @@
                           </script>
                       <p class="indent">
                         For my PhD I am working in the <a href="https://www.oceanconservationlab.com/">Bates Lab</a>
-                        at the University of Victoria, and I will be
-                        focusing on how multiple stressors interact (e.g., marine
-                        heatwaves, deoxygenation and human actions) and affect various aspects of coral
-                        and rocky reef communities. This work is important because the interactions amongst
-                        different stressors are often unpredictable but very common and lead to losses in
-                        ecosystem functioning and less productive environments. While the effect of two
-                        stressors can equal the sum of the effect that each stressor would have on an environment
-                        individually (additive), the majority of the reported results of multiple stressors have
-                        been interactive with effects that are larger than the additive effect (synergistic)
-                        anticipated and observed. Thus, I want to examine how these stressors influence the
-                        invertebrate and algal communities on shallow reefs through impacts on foundational
-                        habitat forming species such as coral and kelp. My aim will be to examine these factors
-                        using a hierarchical framework (i.e., spatial, temporal and experimental).
+                        at the University of Victoria, examining how heat, hunger and habitat loss affect marine
+                        invertebrate communities. My research integrates fieldwork, experiments, and the analysis of 
+                        large-scale ecological datasets to understand how climate change and anthropogenic disturbance 
+                        are reshaping marine invertebrate communities. I am particularly interested in how habitat loss 
+                        and food limitation interact with rising temperatures to influence organismal energetics, physiology, 
+                        and ultimately ecosystem functioning. These questions are central to predicting biodiversity shifts 
+                        and informing conservation strategies in our changing oceans.
+                      </p>
+                      <p>
+                        My first chapter is already published in Diversity and Distributions <a href="https://doi.org/10.1111/ddi.70044">(here)</a> and 
+                        examines the effect of temperature and habitat loss across both space and time on marine invertebrate communities using a 
+                        long-term data set from the Channel Islands in Southern California.
+                      </p>
+                      <p>
+                        My second chapter uses <a href="https://reeflifesurvey.com/">Reef Life Survey</a> Data to examine the effect of fish consumption on changes in 
+                        marine invertebrate abundance during a major marine heatwave in Australia.
+                      </p>
+                      <p>
+                        My third chapter involved a collaboration with the <a href="https://hakai.org/">Hakai's</a> Marna Lab Team on Quadra Island. I performed 
+                        a set of experiments using <i>Dermasterias imbricata</i> aka Leather sea stars, to examine if access to food is able to mitigate
+                        the negative effects of thermal stress. These experiments have finished an I am in the final stages of writing this manuscript. Stay
+                        tuned for this manuscript.
                       </p>
 
                     </section>
