--- a/research.html
+++ b/research.html
@@ -60,16 +60,15 @@
 
 											<header>
 												<h2>My Research</h2>
-												<h3><a href="phd_research.html">Multiple stressor interactions and their effects
-													on marine invertebrate communities</a></h3>
+												<h3><a href="phd_research.html">Heat, hunger and habitat loss on marine invertebrate communities</a></h3>
 											</header>
 
 											<section>
 												<a href="phd_research.html" class="image featured"><img src="images/DominiqueMaucieri_kelp.jpg" alt="" /></a>
 												<p style="text-align:center">
-													For my PhD I am working in the Bates lab at the University of Victoria, and I will be
-													focusing on how multiple stressors interact (e.g., marine heatwaves, deoxygenation
-													and human actions) and affect various aspects of coral and rocky reef communities.
+													For my PhD I am working in the Bates lab at the University of Victoria, examining how heat, hunger
+													and habitat loss affect marine invertebrate communities using both experiments and long-term 
+													data sets. 
 												</p>
 											</section>
 
@@ -147,17 +146,19 @@
 								<div class="col-12">
 						<h2 class="major"><span>Advice to young scientists</span></h2>
 
-									<p style="text-align:center">My favorite part of my ecology degree is that every day in the field is
-										unique and there is always an exception to every rule. You never know what
+									<p style="text-align:center">My favorite part of my ecology degree is that every day in the field
+										and even in the lab is
+										unique. You never know what
 										you are going to find, how organisms will react or how environments will
-										change, so it keeps you on your toes and allows you to be creative and reflective.
+										change, there is always an exception to every rule, so it keeps you on your toes and allows you to be 
+										creative and reflective.
 									</p>
-									<p style="text-align:center">For those looking to pursue a degree in biology, my advice is don’t
+									<p style="text-align:center">For those looking to pursue a degree in biology, my advice is don't
 										specialize too much. Take courses and do research that is in a broad
 										range of topics. It is all applicable and I often see students who only look at
 										one taxa or environment their whole degree end up very specialized and
 										fail to see all the connections between other taxa and environments.
-										Also, you don’t truly know if you like or hate something until you give it a try.
+										Also, you don't truly know if you like or hate something until you give it a try.
 									</p>
 								</div>
 							</div>
